# summarization

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  tox.ini
dock/results/: Test_predict.xls  data_llama.xlsx
src/: __main__.py  __train__.py
src/base/: base_datamodule.py  base_metric.py  base_nn.py
src/callbacks/: debug.py
src/constantsconfigs/: configs.py  constants.py
src/dataprepare/: datamodule.py  datamodules.py  dataset.py  datasets.py  load_data_jsonl2df.py
src/metrics/: custom.py  get_metrics.py  metrics.py
src/nn/: decoder.py  encoder.py  nn_model.py  nn_model_main.py  nn_models.py  schedulers.py  serialization_module.py
src/utils/: load_config.py  load_data_jsonl2df.py  model.py  schedulers.py  serialization_module.py
