[tool.poetry]
name = "summarization"
version = "0.1.0"
description = ""
authors = ["anatoly <t.vlasov23@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
